force-app/main/default/objects/Hours__c/Hours__c.object-meta.xml
<CustomObject>
    <label>Stunden</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stunden</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>