force-app/main/default/objects/Hours__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stunden</relationshipName>
    <type>Lookup</type>
</CustomField>